# myDelfi

./: README.md  amort_quijote  cmaf.py  mdn.py  quijote_pk.ipynb  setup.cfg  tpcf_params.npy  training_mles_10k.npy  training_theta_10k.npy
.ipynb_checkpoints/: BORG_WL_LFI elu-checkpoint.ipynb  BORG_WL_LFI-checkpoint.ipynb  BORG_WL_LFI_amp-checkpoint.ipynb  BORG_WL_LFI_new-checkpoint.ipynb  BORG_WL_LFI_regression-checkpoint.ipynb  regression_S8_convert-checkpoint.ipynb  wiener-imnn-checkpoint.ipynb
examples/: amortized_post  jla_sne.ipynb  quijote_pk.ipynb  tpcf_data.npy
mydelfi/: __init__.py  affine.py  delfi.py  ndes.py  plotting.py  priors.py  score.py  train.py
mydelfi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mydelfi/__pycache__/: delfi.py
