
[metadata]
name = mydelfi
version = 0.0.0
description = pydelfi code in tf2 for personal use

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    tqdm
    pandas
    pathlib
    pyaml
    seaborn
    chainconsumer
    tensorflow>=2.7
    tensorflow_probability==0.15.0-dev20211116
